testando se a api ta funcionando

--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.21.2",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7",
     "uuid": "^11.0.3"
+  },
+  "scripts": {
+    "start": "src/index.js"
   }
 }
