--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.5"
   },
   "scripts": {
