--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "mysql2": "^3.12.0",
     "sqlite3": "^5.1.7",
     "uuid": "^11.0.5"
   },
