--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "nodemon": "^3.1.9",
     "sqlite3": "^5.1.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.5"
   },
   "scripts": {
-    "start": "node src/index.js"
+    "start": "npx nodemon src/index.js"
   }
 }
